<resources>
    <string name="app_name">PasswordManagerMobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sites">Sites</string>
    <string name="social_media">Social Media</string>
    <string name="facebook">Facebook</string>
    <string name="youtube">YouTube</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="pinterest">Pinterest</string>
    <string name="copy_password">Copy Password</string>
    <string name="www_facebook_com">www.facebook.com</string>
    <string name="www_youtube_com">www.youtube.com</string>
    <string name="www_twitter_com">www.twitter.com</string>
    <string name="www_instagram_com">www.instagram.com</string>
    <string name="www_pinterest_com">www.pinterest.com</string>
    <string name="type_keywords_to_search">Type keywords to search</string>
    <string name="add_site">Add Site</string>
    <string name="url">URL</string>
    <string name="site_name">Site Name</string>
    <string name="sector_folder">Sector/Folder</string>
    <string name="user_name">User Name</string>
    <string name="site_password">Site Password</string>
    <string name="notes">Notes</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
</resources>