<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.AddSite">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/splashScreenBackground"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/add_site" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/scrollViewmarginTop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d20dp"
                android:layout_marginEnd="@dimen/d20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d75dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="@dimen/d34dp"
                        android:layout_height="@dimen/d24dp"
                        android:fontFamily="@font/open_sans_regular"
                        android:text="@string/url"
                        android:textAlignment="textStart"
                        android:textColor="@color/lightgray"
                        android:textSize="@dimen/d18sp" />

                    <EditText
                        android:id="@+id/urlEdt"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/d41dp"
                        android:layout_marginTop="@dimen/d11dp"
                        android:background="@drawable/edittext_shape"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d75dp"
                    android:layout_marginTop="@dimen/d20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/d24dp"
                        android:fontFamily="@font/open_sans_regular"
                        android:text="@string/site_name"
                        android:textAlignment="textStart"
                        android:textColor="@color/lightgray"
                        android:textSize="@dimen/d18sp" />

                    <EditText
                        android:id="@+id/siteNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/d41dp"
                        android:layout_marginTop="@dimen/d11dp"
                        android:background="@drawable/edittext_shape"
                        android:inputType="text"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d75dp"
                    android:layout_marginTop="@dimen/d20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/d24dp"
                        android:fontFamily="@font/open_sans_regular"
                        android:text="@string/sector_folder"
                        android:textAlignment="textStart"
                        android:textColor="@color/lightgray"
                        android:textSize="@dimen/d18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/d41dp"
                        android:layout_marginTop="@dimen/d11dp"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/folderSpiner"
                            android:layout_width="@dimen/d0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:background="@drawable/edittext_shape" />

                        <ImageButton
                            android:id="@+id/spinner_button"
                            android:layout_width="@dimen/d0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.25"
                            android:background="@drawable/edittext_shape"
                            android:src="@drawable/path" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d75dp"
                    android:layout_marginTop="@dimen/d20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/d24dp"
                        android:fontFamily="@font/open_sans_regular"
                        android:text="@string/user_name"
                        android:textAlignment="textStart"
                        android:textColor="@color/lightgray"
                        android:textSize="@dimen/d18sp" />

                    <EditText
                        android:id="@+id/userNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/d41dp"
                        android:layout_marginTop="@dimen/d11dp"
                        android:background="@drawable/edittext_shape"
                        android:inputType="text"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d75dp"
                    android:layout_marginTop="@dimen/d20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/d24dp"
                        android:fontFamily="@font/open_sans_regular"
                        android:text="@string/site_password"
                        android:textAlignment="textStart"
                        android:textColor="@color/lightgray"
                        android:textSize="@dimen/d18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/d41dp"
                        android:layout_marginTop="@dimen/d11dp"
                        android:background="@drawable/edittext_background"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/sitePassEt"
                            android:layout_width="@dimen/d0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:background="@drawable/edittext_shape"
                            android:inputType="textPassword"
                            android:longClickable="false"
                            android:textColor="@color/black" />

                        <ImageButton
                            android:id="@+id/password_toggle"
                            android:layout_width="@dimen/d0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.25"
                            android:background="@color/light_grey"
                            android:src="@drawable/ic_baseline_visibility_off_24" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d95dp"
                    android:layout_marginTop="@dimen/d20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/d24dp"
                        android:fontFamily="@font/open_sans_regular"
                        android:text="@string/notes"
                        android:textAlignment="textStart"
                        android:textColor="@color/lightgray"
                        android:textSize="@dimen/d18sp" />

                    <EditText
                        android:id="@+id/notesEt"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/d61dp"
                        android:layout_marginTop="@dimen/d11dp"
                        android:background="@drawable/edittext_shape"
                        android:inputType="text"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/d70dp"
                android:layout_marginTop="@dimen/d60dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear1">

                <Button
                    android:id="@+id/resetBtn"
                    android:layout_width="@dimen/d0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/skyblue"
                    android:fontFamily="@font/robotomedium"
                    android:text="@string/reset"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/d20sp" />

                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="@dimen/d0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/d2dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/skyblue"
                    android:fontFamily="@font/robotomedium"
                    android:text="@string/save"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/d20sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>