<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".activity.HomeScreen">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/splashScreenBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/burger_iv"
                android:layout_width="18dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="21dp"
                android:src="@drawable/burger_menu" />

            <ImageView
                android:id="@+id/passmanager_iv"
                android:layout_width="87dp"
                android:layout_height="32dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="13dp"
                android:src="@drawable/pass_manager" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end">

            <ImageView
                android:id="@+id/search_iv"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="33dp"
                android:src="@drawable/search" />

            <ImageView
                android:id="@+id/sync_iv"
                android:layout_width="29.7dp"
                android:layout_height="22dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="33dp"
                android:layout_marginEnd="34dp"
                android:src="@drawable/sync_icn" />

            <ImageView
                android:id="@+id/profile_iv"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="19dp"
                android:src="@drawable/profile" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/type_keywords_to_search"
            android:layout_weight="1.75"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingEnd="20.3dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            android:layout_weight=".25"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/sites"
                    android:textAlignment="textStart"
                    android:textColor="#3C4857"
                    android:textSize="24sp" />

                <View
                    android:layout_width="29dp"
                    android:layout_height="3dp"
                    android:layout_marginRight="24dp"
                    android:background="#FFA136" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/social_media"
                    android:textColor="#3C4857"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/countTv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/count_shape"
                    android:fontFamily="@font/open_sans_semibold"
                    android:textAlignment="center"
                    android:text="07"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="6.8dp"
                    android:src="@drawable/path" />
            </LinearLayout>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relative"
            tools:listitem="@layout/data_list_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/addFloatingBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:src="@drawable/add_btn"
        app:fabCustomSize="48dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>